--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -152,6 +152,16 @@
   #t{
     height: 600px !important;
   }
+  
+  .lista{
+    text-align:left;
+  }
+  
+  .lista li{
+    list-style-type: none;
+    font-size:1.2em;
+    margin-top:0.6em;
+  }
   </style>
  <title>SAPED</title>
 </head>
