--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,7 +43,7 @@ text-justify: inter-word;">O SAPED promoverá palestras com temas atuais e de gr
       </div>
     </di>
     
-    <div class="ui vertical stripe segment">
+    <div class="ui vertical stripe ">
         <div class="ui  container " >
           <h3 id="evento" class="ui center aligned column header ">Cronograma do evento</h3>
           <table class="ui celled table" >
@@ -134,6 +134,103 @@ UECE </td>
             </table>
         </div>
       </div>
+    
+    <div class='ui horizontal section divider'  id="minicursos" >Minicursos</div>
+    <div class='ui center aligned  grid' >
+      <div class='seven wide column'>
+        <h4 class='ui header'>O lugar do brincar na Educação Infantil - Prof.ª Mestre Alessandra Lopes Castelini</h4>
+        <div class='ui justify aligned text '>
+          <p style="text-align: justify;
+text-justify: inter-word;">
+          Ementa:
+          Concepção de infância e criança. As DCNEIS/2009 e a linguagem corporal.
+          Proposta curricular da Educação Infantil. As interações e brincadeiras. A
+          organização espacial das instituições. Os desafios da implementação de jogos e
+          brinquedos. O brinquedo na perspectiva de Vygotsky.
+          Objetivos: <br>
+          <div class="ui list">
+            <ul class='lista'>
+              <li class='item'> <i class="right triangle icon"></i> Reconhecer a criança enquanto sujeito social e histórico e o direito à Educação
+              Infantil;</li>
+              <li class='item'> <i class="right triangle icon"></i> Perceber a importância das discussões sobre a pedagogia da infância;</li>
+              <li class='item'> <i class="right triangle icon"></i> Promover o debate sobre a importância do brincar na Educação Infantil e as
+              possibilidades de interação nas brincadeiras segundo Vygotsky;</li>
+              <li class='item'> <i class="right triangle icon"></i> Possibilitar uma reflexão sobre as práticas docentes dos profissionais que
+              atuam;</li>
+              <li class='item'> <i class="right triangle icon"></i> Compreender a proposta curricular da Educação Infantil como norteadora das
+              ações visando o desenvolvimento das crianças;</li>
+              <li class='item'> <i class="right triangle icon"></i> Refletir sobre a organização espacial oferecida nas instituições;</li>
+              <li class='item'> <i class="right triangle icon"></i> Identificar os desafios para a implementação de jogos e uso de brinquedos na
+              Educação Infantil;</li>
+              <li class='item'> <i class="right triangle icon"></i> Socializar brinquedos e brincadeiras para a Educação Infantil;</li>
+            </ul>
+          </div>
+          </p>
+        </div>
+      </div>
+      <div class='seven wide column'>
+        <h4 class='ui header'>A utilização do pensamento de Michel Foucault como método de pesquisa em
+História da Educação - Prof. Mestre Nilton Ferreira Bittencourt Júnior</h4>
+        <div class='ui justify aligned text '>
+          <p style="text-align: justify;
+text-justify: inter-word;">
+            O pensamento do filósofo Francês Michel Foucault é singular. Com uma forma
+analítica que foge do convencional, ele escreveu várias obras que se tornaram
+referência em todo o mundo. Especificamente na pesquisa em história, recebe
+elogios na obra História e Memória (1996), escrito pelo historiador Jacques Le
+Goff, legitimando sua pesquisa como instrumento de análise histórica. Suas
+obras: História da loucura na idade clássica (1961) e História da sexualidade
+(1976), por exemplo, são vistas como uma nova forma de fazer pesquisa
+histórica. O presente minicurso pretende discutir a respeito de alguns termos
+desenvolvido por Foucault (Biopoder/biopolítica; Segurança; Território;
+população; governamentalidade), contido na obra Segurança, território,
+população: curso dado no College de France (1977-1978) e a possibilidade de
+utilização destes termos como categoria de análise, especificamente na história
+da educação. O minicurso será ministrado em três momentos: Análise dos
+termos foucaultianos; perspectivas de pesquisa em história da educação;
+contexto de aplicação destes termos como categorias de análise.
+          </p>
+        </div>
+      </div>
+      <div class='seven wide column'>
+        <h4 class='ui header'>Marxismo e Educação – Prof.ª Mestre Jasmine Castro</h4>
+        <div class='ui justify aligned text '>
+          <p style="text-align: justify;
+text-justify: inter-word;">
+            Esta proposta de minicurso tem como objetivo situar historicamente as
+políticas educacionais no Brasil e suas relações com as determinações do
+capital estrangeiro, à luz das discussões marxianas. Trata-se de uma
+oportunidade para refletir sobre a relação entre Estado e Capital na definição
+das políticas educacionais, propondo uma introdução ao Marxismo, a partir do
+contexto social e político atual. Utilizar-se- á como suporte para esse minicurso,
+por exemplo, a análise do Programa Escola sem Partido e sua intencionalidade
+política; discussão da Reforma do Ensino Médio e suas determinações de classe
+subjacentes. Faremos exibição e discussão de vídeo sobre o tema, articulando à
+leitura de pequenos textos, na possibilidade do tempo disponível para a sua
+realização.
+          </p>
+        </div>
+      </div>
+      <div class='seven wide column'>
+        <h4 class='ui header'>Aprendendo e ensinando Matemática sem medo – Prof. ª Doutora Maria
+Cézar Sousa</h4>
+        <div class='ui justify aligned  text '>
+          <p style="text-align: justify;
+text-justify: inter-word;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+      <div class='seven wide column'>
+        <h4 class='ui center aligned header' >Scratch com Latex – Prof. Mestre Algeir Sampaio</h4>
+        <div class='ui justify aligned text '>
+          <p style="text-align: justify;
+text-justify: inter-word;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+    </div>
       
     <h4 class="ui horizontal header divider">
       <a href="#" id='palestrantes'>Palestrantes</a>
@@ -298,7 +395,7 @@ política, partido politico, movimentos sociais, educação e cultura.
               </div>
             </div>
 
-      <div class="ui vertical stripe segment" id="minicursos">
+      <div class="ui vertical stripe segment">
         <div class="ui  container " >
           <h3 class="ui center aligned column header ">Apoiadores:</h3>
           <div class="ui large images" style='margin:0 auto;'>
