ufpi.jpeg movido para ufpi.jpg

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -399,7 +399,7 @@ política, partido politico, movimentos sociais, educação e cultura.
         <div class="ui  container " >
           <h3 class="ui center aligned column header ">Apoiadores:</h3>
           <div class="ui large images" style='margin:0 auto;'>
-            <%= image_tag 'ufpi.jpeg', class:'ui massive image' %>
+            <%= image_tag 'ufpi.jpg', class:'ui massive image' %>
             <%= image_tag 'nutepp.png', class:'ui massive image'  %>
           </div>
         </div>
