--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -136,7 +136,7 @@ UECE </td>
       </div>
     
     <div class='ui horizontal section divider'  id="minicursos" >Minicursos</div>
-    <div class='ui center aligned  grid' >
+    <div class='ui center aligned internally  celled grid' >
       <div class='seven wide column'>
         <h4 class='ui header'>O lugar do brincar na Educação Infantil - Prof.ª Mestre Alessandra Lopes Castelini</h4>
         <div class='ui justify aligned text '>
@@ -192,6 +192,7 @@ contexto de aplicação destes termos como categorias de análise.
           </p>
         </div>
       </div>
+      <div class='row'>
       <div class='seven wide column'>
         <h4 class='ui header'>Marxismo e Educação – Prof.ª Mestre Jasmine Castro</h4>
         <div class='ui justify aligned text '>
@@ -221,6 +222,8 @@ text-justify: inter-word;">
           </p>
         </div>
       </div>
+      </div>
+      <div class='row'>
       <div class='seven wide column'>
         <h4 class='ui center aligned header' >Scratch com Latex – Prof. Mestre Algeir Sampaio</h4>
         <div class='ui justify aligned text '>
@@ -230,23 +233,53 @@ text-justify: inter-word;">
           </p>
         </div>
       </div>
+      <div class='seven wide column'>
+        <h4 class='ui center aligned header' >CURSO 6</h4>
+        <div class='ui justify aligned text '>
+          <p style="text-align: justify;
+text-justify: inter-word;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+      </div>
+      <div class='row'>
+      <div class='seven wide column'>
+        <h4 class='ui center aligned header' >CURSO 7</h4>
+        <div class='ui justify aligned text '>
+          <p style="text-align: justify;
+text-justify: inter-word;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+      <div class='seven wide column'>
+        <h4 class='ui center aligned header' >CURSO 8</h4>
+        <div class='ui justify aligned text '>
+          <p style="text-align: justify;
+text-justify: inter-word;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+      </div>
     </div>
       
     <h4 class="ui horizontal header divider">
       <a href="#" id='palestrantes'>Palestrantes</a>
     </h4>
     <div class="ui vertical stripe quote segment">
-        <div class="ui equal width stackable internally celled grid">
+        <div class="ui equal width stackable internally  grid">
           <div class="center aligned row">
             <div class="column">
               <h3>José Deribaldo Gomes dos Santos</h3>
               <a href="#" class="ui medium image">
-                  <%= image_tag 'palestrante1.png', class: 'ui circular image' %>
+                  <%= image_tag 'palestrante1.png', class: 'ui bordered circular image' %>
               </a>
             </div>
-            <div class="column">
+            <div class="seven wide middle aligned column" style='padding-right:2em;'>
 
-              <p style="text-align: justify;
+              <p class="palestrante" style="text-align: justify;
 text-justify: inter-word;">
                 Possui graduação em Pedagogia pela
                 Universidade Estadual Vale do Acaraú
@@ -276,7 +309,7 @@ text-justify: inter-word;">
         </div>
       </div>
       <div class="ui vertical stripe quote segment">
-          <div class="ui equal width stackable internally celled grid">
+          <div class="ui equal width stackable internally  grid">
             <div class="center aligned row">
               <div class="column">
                 <h3>Raquel Dias Araujo</h3>
@@ -284,9 +317,9 @@ text-justify: inter-word;">
                     <%= image_tag 'palestrante2.png', class: 'ui circular image' %>
                 </a>
               </div>
-              <div class="column">
+              <div class="seven wide middle aligned column" style='padding-right:2em;'>
 
-                <p style="text-align: justify;
+                <p class="palestrante" style="text-align: justify;
 text-justify: inter-word;">
                   Possui graduação em Pedagogia pela Universidade
                   Estadual do Ceará (1994), Mestrado Em Educação
@@ -308,7 +341,7 @@ text-justify: inter-word;">
         </div>
 
         <div class="ui vertical stripe quote segment">
-            <div class="ui equal width stackable internally celled grid">
+            <div class="ui equal width stackable internally  grid">
               <div class="center aligned row">
                 <div class="column">
                   <h3>Leonardo Severo</h3>
@@ -316,9 +349,9 @@ text-justify: inter-word;">
                       <%= image_tag 'palestrante3.png', class: 'ui circular image' %>
                   </a>
                 </div>
-                <div class="column">
+                <div class="seven wide middle aligned column" style='padding-right:2em;'>
 
-                  <p style="text-align: justify;
+                  <p class="palestrante" style="text-align: justify;
 text-justify: inter-word;">
                     Doutor e Mestre em Educação pelo Programa de Pós-Graduação em Educação da Universidade
 Federal da Paraíba (UFPB), com estágios doutorais na Universidade de São Paulo (USP) e
@@ -338,7 +371,7 @@ ainda, como editor da Revista Espaço do Currículo.
           </div>
 
           <div class="ui vertical stripe quote segment">
-              <div class="ui equal width stackable internally celled grid">
+              <div class="ui equal width stackable internally  grid">
                 <div class="center aligned row">
                   <div class="column">
                     <h3>Carla Silvino de Oliveira </h3>
@@ -346,9 +379,9 @@ ainda, como editor da Revista Espaço do Currículo.
                         <%= image_tag 'palestrante4.png', class: 'ui circular image' %>
                     </a>
                   </div>
-                  <div class="column">
+                  <div class="seven wide middle aligned column" style='padding-right:2em;'>
 
-                    <p style="text-align: justify;
+                    <p class="palestrante" style="text-align: justify;
 text-justify: inter-word;">
                       Doutoranda em Educação pela Universidade de São Paulo
 - USP. Possui graduação em História Licenciatura Plena
@@ -371,7 +404,7 @@ Estágio Supervisionado.
             </div>
             
             <div class="ui vertical stripe quote segment">
-              <div class="ui equal width stackable internally celled grid">
+              <div class="ui equal width stackable internally  grid">
                 <div class="center aligned row">
                   <div class="column">
                     <h3>Elda Maria Freire Maciel </h3>
@@ -379,10 +412,9 @@ Estágio Supervisionado.
                         <%= image_tag 'palestrante5.png', class: 'ui circular image' %>
                     </a>
                   </div>
-                  <div class="column">
-
+                  <div class="seven wide middle aligned column" style='padding-right:2em;'>
                     <p style="text-align: justify;
-text-justify: inter-word;">
+text-justify: inter-word;" class="palestrante" >
                       Possui Doutorado em Sociologia pela Universidade Federal do Ceará (2009), Mestrado
 em Educação pela Universidade Federal do Ceará (2000), graduação em Bacharelado
 em Ciências Sociais pela Universidade Estadual do Ceará (2009), graduação em
@@ -398,9 +430,9 @@ política, partido politico, movimentos sociais, educação e cultura.
       <div class="ui vertical stripe segment">
         <div class="ui  container " >
           <h3 class="ui center aligned column header ">Apoiadores:</h3>
-          <div class="ui large images" style='margin:0 auto;'>
-            <%= image_tag 'ufpi.jpg', class:'ui massive image' %>
-            <%= image_tag 'nutepp.png', class:'ui massive image'  %>
+          <div class="ui large images" style='margin:0 auto;padding-left:2em;'>
+            <%= image_tag 'ufpi.jpg', class:'ui massive image apoiadores', style:'margin-left: 10em;' %>
+            <%= image_tag 'nutepp.png', class:'ui massive image apoiadores'  %>
           </div>
         </div>
       </div>
