--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -162,6 +162,10 @@
     font-size:1.2em;
     margin-top:0.6em;
   }
+  
+  .ui.vertical.stripe p {
+    font-size:16px;
+  }
   </style>
  <title>SAPED</title>
 </head>
