--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
       <div class="ui middle aligned stackable grid container">
         <div class="row">
           <div class="eight wide column">
-            <h3 >Evento</h3>
+            <h3 class='ui header atencao'>Evento</h3>
             <p class='ui text justify' style="text-align: justify;
 text-justify: inter-word;">A VII Semana Acadêmica de Pedagogia consiste em um evento anual realizado desde 2010,
 pela Coordenação do curso de Licenciatura Plena em Pedagogia do CSHNB/UFPI. Trata-se de
@@ -21,15 +21,15 @@ práticas de formação que encontram lugar nas atividades desenvolvidas no curs
 profissionais egressos do mesmo. Pressupõe-se, o conceito de Pedagogia, como saber-fazer
 fomentador da práxis educativa, referenciando os desafios globais e locais que tencionam a
 agenda pública da educação.</p>
-                        <h3 class="ui header">Submissão de trabalhos</h3>
+                        <h3 class="ui header atencao">Submissão de trabalhos</h3>
             <p style="text-align: justify;
-text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado. <a href="edital.pdf" class="ui button tiny teal">VEJA AS NORMAS</a></p>
+text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado. <a href="edital.pdf" class="ui button tiny teal" >VEJA AS NORMAS</a></p>
           </div>
-          <div id="maincontent" class="six wide right floated column" style="margin-top:-20em;">
+          <div id="maincontent" class="six wide right floated column" style="margin-top:-16em;">
             <%= image_tag 'fundo.png', class: 'ui large bordered rounded image' %>
           </div>
-          <div id="maincontent" class="eight wide right floated column" style="margin-top:-20em;">
-            <h3 >Palestras</h3>
+          <div id="maincontent" class="eight wide right floated column" style="margin-top:-14em;">
+            <h3 class="ui header atencao" >Palestras</h3>
             <p style="text-align: justify;
 text-justify: inter-word;">O SAPED promoverá palestras com temas atuais e de grande interesse da academia. Possibilitando assim aos participantes reconhecerem o trabalho apresentado pelos convidados de maneira mais clara e se atualizarem dos assuntos abordados, podendo desenvolver projetos pessoais ou esclarecer dúvidas decorrentes dos temas abordados.</p>
 
@@ -45,11 +45,11 @@ text-justify: inter-word;">O SAPED promoverá palestras com temas atuais e de gr
     
     <div class="ui vertical stripe ">
         <div class="ui  container " >
-          <h3 id="evento" class="ui center aligned column header ">Cronograma do evento</h3>
+          <h3 id="evento" class="ui center aligned column header atencao ">CRONOGRAMA DO EVENTO</h3>
           <table class="ui celled table" >
               <thead>
                 <tr>
-                  <th rowspan="2" colspan='6' class="center aligned">VII SEMANA ACADÊMICA DE PEGAGOCIA DO CSHNB/UFPI<br>
+                  <th rowspan="2" colspan='6' class="center aligned" style="background-color:#4E94FF;">VII SEMANA ACADÊMICA DE PEGAGOCIA DO CSHNB/UFPI<br>
                     As (ré)formas educacionais e a formação política do professor: velhos embates, novas estratégias
                   </th>
                 </tr>
@@ -57,9 +57,9 @@ text-justify: inter-word;">O SAPED promoverá palestras com temas atuais e de gr
               </thead>
               <tbody>
                 <tr>
-                  <th colspan='2' class="center aligned"> 20 de setembro</th>
-                  <th colspan='2' class="center aligned"> 21 de setembro</th>
-                  <th colspan='2' class="center aligned"> 22 de setembro</th>
+                  <th style="background-color:#2091CC;" colspan='2' class="center aligned"> 20 de setembro</th>
+                  <th style="background-color:#2091CC;" colspan='2' class="center aligned"> 21 de setembro</th>
+                  <th style="background-color:#2091CC;" colspan='2' class="center aligned"> 22 de setembro</th>
                 </tr>
                 
                 <tr>
@@ -429,7 +429,7 @@ política, partido politico, movimentos sociais, educação e cultura.
 
       <div class="ui vertical stripe segment">
         <div class="ui  container " >
-          <h3 class="ui center aligned column header ">Apoiadores:</h3>
+          <h3 class="ui center aligned column header atencao ">Apoiadores:</h3>
           <div class="ui large images" style='margin:0 auto;padding-left:2em;'>
             <%= image_tag 'ufpi.jpg', class:'ui massive image apoiadores', style:'margin-left: 10em;' %>
             <%= image_tag 'nutepp.png', class:'ui massive image apoiadores'  %>
