--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -166,13 +166,34 @@
   .ui.vertical.stripe p {
     font-size:16px;
   }
+  
+  .atencao{
+    line-height:1.8em;
+    font-weight:400;
+    font-family:'Lato', sans-serif;   
+    letter-spacing:8px !important;
+    text-transform:uppercase !important;
+  }
+  
+  .mainmenu * {
+    text-transform:uppercase !important;
+    font-size:15px;
+  }
+  
+  
+  html, body {
+    font-size:16px;
+    line-height:1.8em;
+    font-weight:400;
+    font-family:'Lato', sans-serif;   
+  }
   </style>
  <title>SAPED</title>
 </head>
 
 <body>
   <div class="ui large top menu fixed " style='background-color:#FFC70E;'>
-    <div class="ui container ">
+    <div class="ui container mainmenu">
       <a class="active item" href="/">Home</a>
       <a class="item" href="#evento">Evento</a>
       <a class="item" href="#minicursos">Minicursos</a>
@@ -182,7 +203,7 @@
           <a class="ui button">Log in</a>
         </div>
         <div class="item" id="cadastrar">
-          <%= link_to 'Inscrever-se',new_user_registration_path ,class: 'ui primary button' %>
+          <%= link_to 'Inscrever-se',new_user_registration_path ,class: 'ui primary button', style:"background-color:#4E94FF;" %>
         </div>
       </div>
     </div>
