jade opninando como sempre

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,8 @@
       <div class="ui middle aligned stackable grid container">
         <div class="row">
           <div class="eight wide column">
-            <h3 class='ui header atencao'>Evento</h3>
-            <p class='ui text justify' style="text-align: justify;
+            <h3 class='ui header atencao ' >Evento</h3>
+            <p class='ui text justify evento' style="text-align: justify;
 text-justify: inter-word;">A VII Semana Acadêmica de Pedagogia consiste em um evento anual realizado desde 2010,
 pela Coordenação do curso de Licenciatura Plena em Pedagogia do CSHNB/UFPI. Trata-se de
 uma iniciativa que busca promover, em três dias de intensa vivência acadêmica, o debate
@@ -26,7 +26,7 @@ agenda pública da educação.</p>
 text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado. <a href="edital.pdf" class="ui button tiny teal" >VEJA AS NORMAS</a></p>
           </div>
           <div id="maincontent" class="six wide right floated column" style="margin-top:-16em;">
-            <%= image_tag 'fundo.png', class: 'ui large bordered rounded image' %>
+            <%= image_tag 'fundo.png', class: 'ui large bordered rounded image', style:'border-radius: 100px 100px 25px 25px' %>
           </div>
           <div id="maincontent" class="eight wide right floated column" style="margin-top:-14em;">
             <h3 class="ui header atencao" >Palestras</h3>
