--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -182,16 +182,51 @@
   
   
   html, body {
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+    background-size:100%;
     font-size:16px;
     line-height:1.8em;
     font-weight:400;
     font-family:'Lato', sans-serif;   
   }
+  
+  .my-container:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.6;
+    background-image: url('assets/fundo-sol.jpeg');
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    -ms-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-attachment:fixed;
+   
+  }
+    
+    .evento{
+      text-transform:uppercase !important;
+      font-size:12px !important;
+      line-height:2em;
+      font-family: "raleway-regular",Helvetica,Arial,sans-serif !important;
+      font-weight:700;
+      
+    }
   </style>
  <title>SAPED</title>
 </head>
 
 <body>
+  <div class='my-container'>
   <div class="ui large top menu fixed " style='background-color:#FFC70E;'>
     <div class="ui container mainmenu">
       <a class="active item" href="/">Home</a>
@@ -221,6 +256,6 @@
   
   <!-- Modal user -->
   <%= render 'layouts/user' %> 
-
+</div>
 </body>
 </html>
