--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -201,7 +201,7 @@
     height: 100%;
     z-index: -1;
     opacity: 0.6;
-    background-image: url('assets/fundo-sol.jpeg');
+    background-image: url('fundo-sol.jpeg');
     background-repeat: no-repeat;
     background-position: 50% 0;
     -ms-background-size: cover;
