--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -218,7 +218,7 @@ Cézar Sousa</h4>
         <div class='ui justify aligned  text '>
           <p style="text-align: justify;
 text-justify: inter-word;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Aprendendo e ensinando Matemática sem medo. O minicurso tem como objetivo desconstruir os discursos da Matemática como inacessível e como somos constituídos por tais discursos, compreendendo que não apreender tais conhecimentos não se constitui algo natural, mas uma construção e portanto, passível de desconstrução. Trabalharemos com a confecção de recursos didáticos para ensinar Matemática e a utilização de uma abordagem lúdica no processo de ensino e aprendizagem.
           </p>
         </div>
       </div>
@@ -229,10 +229,17 @@ text-justify: inter-word;">
         <div class='ui justify aligned text '>
           <p style="text-align: justify;
 text-justify: inter-word;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            O Scratch é uma linguagem de programação criada em 2007 no MIT e é ideal para pessoas que estão começando a programar. COm ela é possível criar histórias animadas, jogos e outros programas interativos. O Scratch utiliza uma interface gráfica que permite que programas sejam montados como blocos de montar, lembrando o brinquendo LEGO. Além disso, permite a personalização através da incorporação de imagens e sons externos.
+            <br>
+            <br>
+            O LaTeX, desenvolvido na década de 80, por Leslie Lamport, é um conjunto de macros para o programa de diagramção de textos TeX, utilizado amplamente na produção de textos cientificos, devido a sua alta qualidade tipografica. Entretanto, também é utilizado para produção de cartas pessoais, artigos e livros sobre assuntos diversos. O sistema LaTeX fornece ao usuário um conjunto de comandos de alto nível, facilitando dessa forma sua utilização por iniciantes.
+            <br>
+            <br>
+            Neste Minicurso, vamos abordar de forma introdutória o desenvolvimento com Scratch que pode auxiliar o professor em atividades pegagógicas, desenvolvidas especificamente para seus alunos e mostrar as principais características do LaTeX, produdzindo um texto sobre a aplicação criada durante o Minicurso. O prof. Algeir Sampaio e a monitora Tanires Ribeiro, irão conduzir os participantes a experimentação com Scratch, desenvolvendo um pequena aplicação que deve motivar bastantes os participantes.
           </p>
         </div>
       </div>
+      <!--
       <div class='seven wide column'>
         <h4 class='ui center aligned header' >CURSO 6</h4>
         <div class='ui justify aligned text '>
@@ -263,6 +270,7 @@ text-justify: inter-word;">
         </div>
       </div>
       </div>
+      -->
     </div>
       
     <h4 class="ui horizontal header divider">
