add total de vagas

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -218,7 +218,7 @@ Cézar Sousa</h4>
         <div class='ui justify aligned  text '>
           <p style="text-align: justify;
 text-justify: inter-word;">
-            Aprendendo e ensinando Matemática sem medo. O minicurso tem como objetivo desconstruir os discursos da Matemática como inacessível e como somos constituídos por tais discursos, compreendendo que não apreender tais conhecimentos não se constitui algo natural, mas uma construção e portanto, passível de desconstrução. Trabalharemos com a confecção de recursos didáticos para ensinar Matemática e a utilização de uma abordagem lúdica no processo de ensino e aprendizagem.
+             O minicurso tem como objetivo desconstruir os discursos da Matemática como inacessível e como somos constituídos por tais discursos, compreendendo que não apreender tais conhecimentos não se constitui algo natural, mas uma construção e portanto, passível de desconstrução. Trabalharemos com a confecção de recursos didáticos para ensinar Matemática e a utilização de uma abordagem lúdica no processo de ensino e aprendizagem.
           </p>
         </div>
       </div>
