--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,6 +123,7 @@
   	position: absolute;
   	bottom: 0;
   	width: 100%;
+  		left:0;
   	height: 105px;
   	z-index: 10;
   }
@@ -133,6 +134,7 @@
   	left: 45%;
   	bottom: 105px;
   	width: 239px;
+  
   	height: 67px;
   	z-index: 11;
   }
@@ -144,6 +146,7 @@
   	background-color: rgb(0, 0, 0);
   	position: absolute;
   	bottom: 112px;
+  	left:0;
   	width: 100%;
   	height: 0;
   	z-index: 10;
