--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -239,17 +239,33 @@ text-justify: inter-word;">
           </p>
         </div>
       </div>
-      <!--
+      
       <div class='seven wide column'>
-        <h4 class='ui center aligned header' >CURSO 6</h4>
+        <h4 class='ui center aligned header' >Minicurso: Arte e Preservação Ambiental – Beleza Permanente
+Rociania Barreto – Artista Plástica</h4>
         <div class='ui justify aligned text '>
           <p style="text-align: justify;
 text-justify: inter-word;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            A presente abordagem do minicurso tem a intenção de aplicar dois conceitos bases no
+debate sobre Patrimônio cultural e Preservação ambiental: a) patrimônio e estética; b)
+intervenções socioambientais. O processo de trabalho será norteado pelo plano nacional
+de Cultura e Educação Ambiental que, em suas metas, validam o contexto local, a
+participação social e a preservação do meio ambiente.  A definição de preservar remete
+a conservar, proteger e resguardar. A preservação é o suporte da Educação Patrimonial
+(EP) e da Educação Ambiental (EA). As duas têm como objetivo cuidar e compartilhar
+saberes de bens de diferentes naturezas.  A EP tem como objetivo a preservação da
+memória e a apropriação cultural dos bens pela população. No sentido de integrar
+saberes, vamos apresentar aos participantes conceitos sobre a relação do patrimônio
+artístico cultural e a preservação ambiental seguido por vivencias de intervenção
+artística que permitam a reflexão &quot;Conhecer para conservar” gerando ação coletiva nos
+espaços da universidade.
+          <br>
+          Obs: levar 01 Camiseta velha grande para ser usada nas aulas de Artes.
           </p>
         </div>
       </div>
       </div>
+      <!--
       <div class='row'>
       <div class='seven wide column'>
         <h4 class='ui center aligned header' >CURSO 7</h4>
