--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -241,7 +241,7 @@ text-justify: inter-word;">
       </div>
       
       <div class='seven wide column'>
-        <h4 class='ui center aligned header' >Minicurso: Arte e Preservação Ambiental – Beleza Permanente
+        <h4 class='ui center aligned header' >Arte e Preservação Ambiental – Beleza Permanente
 Rociania Barreto – Artista Plástica</h4>
         <div class='ui justify aligned text '>
           <p style="text-align: justify;
