--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,7 @@ fomentador da práxis educativa, referenciando os desafios globais e locais que 
 agenda pública da educação.</p>
                         <h3 class="ui header atencao">Submissão de trabalhos</h3>
             <p style="text-align: justify;
-text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado. <a href="edital.pdf" class="ui button tiny teal" >VEJA AS NORMAS</a>. Submissão dos trabalhos será até o dia 01/09/2017.</p>
+text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado. <a href="edital.pdf" class="ui button tiny teal" >VEJA AS NORMAS</a>. Submissão dos trabalhos será até o dia 01/09/2017 e o resultado do aceite de trabalhos será dia 05/09/2017.</p>
           </div>
           <div id="maincontent" class="six wide right floated column" style="margin-top:-20em;">
             <%= image_tag 'fundo.png', class: 'ui large bordered rounded image', style:'border-radius: 100px 100px 25px 25px' %>
