--- a/app/views/home/admin_dashboard.html.erb
+++ b/app/views/home/admin_dashboard.html.erb
@@ -9,8 +9,6 @@
           <%= render :partial => 'home/user_table', :locals => { users: @users_unconfirmed,  show_links: true } %>
         </div>
         <div class="ui bottom attached tab segment" data-tab="third">
-            <p><%= link_to 'Trabalhos', user_poster_path, class: 'ui button positive' %>
-            <%= link_to 'Usuários confirmados', users_confirmeds_path, class: 'ui button positive' %></p>
             <table class="ui fixed single line celled table">
                 <thead>
                     <tr>
@@ -36,6 +34,30 @@
                     <% end %>
                 </tbody>
             </table>
+            <table class="ui fixed single line celled table">
+                <thead>
+                    <tr>
+                        <th colspan='2'>Grupos tematicos</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% Theme.available.each do |theme| %>
+                        <tr>
+                            <td><%= theme.name %></td>
+                            <td>
+                                <%= link_to 'Download', theme_list_path(theme, format: :pdf),  class: 'ui large button teal'  %>
+                            </td>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
+            <p></p>
+            
+        </div>
+        
+        <div>
+            <p><%= link_to 'Trabalhos', user_poster_path(format: :pdf), class: 'ui button positive' %>
+            <%= link_to 'Usuários confirmados', users_confirmeds_path(format: :pdf), class: 'ui button positive' %></p>
         </div>
         <div class="ui bottom attached tab segment" data-tab="four">
            <table class="ui fixed single line celled table">
@@ -63,6 +85,7 @@
                     <% end %>
                 </tbody>
             </table>
+            
         </div>
     </div>
 </div>
