--- a/app/views/home/reporte.pdf.erb
+++ b/app/views/home/reporte.pdf.erb
@@ -11,7 +11,7 @@
   </head>
   <body onload='number_pages'>
     
-<h3>Pôsteres</h3>
+<h3>Banners</h3>
     <table class="table">
         <thead>
             <tr>
@@ -25,7 +25,7 @@
             </tr>
         </thead>
         <tbody>
-            <% @theme.users.each do |user| %>
+            <% User.banners.each do |user| %>
                 <tr>
                     <td><%= user.article_title.upcase %></td>
                     <td><%= user.author_one.upcase %></td>
