--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,7 @@
       <div class="ui middle aligned stackable grid container">
         <div class="row">
           <div class="eight wide column">
+            <h4 class='ui header center atencao ' style="color:#fff;margin-top:-68px;">Foto: Juscimar Barão </h4>
             <h3 class='ui header atencao ' >Evento</h3>
             <p class='ui text justify evento' style="text-align: justify;
 text-justify: inter-word;">A VII Semana Acadêmica de Pedagogia consiste em um evento anual realizado desde 2010,
@@ -25,7 +26,7 @@ agenda pública da educação.</p>
             <p style="text-align: justify;
 text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado. <a href="edital.pdf" class="ui button tiny teal" >VEJA AS NORMAS</a>. Submissão dos trabalhos será até o dia 01/09/2017 e o resultado do aceite de trabalhos será dia 05/09/2017.</p>
           </div>
-          <div id="maincontent" class="six wide right floated column" style="margin-top:-20em;">
+          <div id="maincontent" class="six wide right floated column" style="margin-top:-23em;">
             <%= image_tag 'fundo.png', class: 'ui large bordered rounded image', style:'border-radius: 100px 100px 25px 25px' %>
           </div>
           <div id="maincontent" class="eight wide right floated column" style="margin-top:-14em;">
