--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
       <div class="ui middle aligned stackable grid container">
         <div class="row">
           <div class="eight wide column">
-            <h4 class='ui header center atencao ' style="color:#fff;margin-top:-68px;">Foto: Juscimar Barão </h4>
+            <h4 id="rotate" class='ui header center atencao ' style="margin-top:-68px;">Foto: Juscimar Barão </h4>
             <h3 class='ui header atencao ' >Evento</h3>
             <p class='ui text justify evento' style="text-align: justify;
 text-justify: inter-word;">A VII Semana Acadêmica de Pedagogia consiste em um evento anual realizado desde 2010,
