--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -30,9 +30,9 @@
             <p></p>
           <% end %>
           <%= render 'layouts/alert_messages' %>
-          Para download das normas de submissão de trabalhos <a href="edital.pdf" class="ui tiny button "> CLIQUE AQUI</a>.
+          
       </p>
-      <p>Editar perfil <%= link_to 'editar',edit_user_registration_path %></p>
+      <p>Mudanças de minicurso ou demais atualizações da sua inscrição click em <%= link_to 'Perfil',edit_user_registration_path, class:'ui button teal' %></p>
       <% unless current_user.article_url  %>
         <%= render('article') unless current_user.participation_id == 1 %>
       <% end %>
