update admin dashboard

--- a/app/views/home/_user_table.html.erb
+++ b/app/views/home/_user_table.html.erb
@@ -2,7 +2,7 @@
     <thead>
         <tr>
             <th>Nome</th>
-            <th>UFPI?</th>
+            <th>Filiação <br> <small>(Se dicente matricula, se docente a instituição será exibido)</small></th>
             <% if show_links %>
                 <th>Ação</th>
             <% end %>
