--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,7 @@ fomentador da práxis educativa, referenciando os desafios globais e locais que 
 agenda pública da educação.</p>
                         <h3 class="ui header atencao">Submissão de trabalhos</h3>
             <p style="text-align: justify;
-text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado. <a href="edital.pdf" class="ui button tiny teal" >VEJA AS NORMAS</a>. Submissão dos trabalhos será até o dia 01/09/2017 e o resultado do aceite de trabalhos será dia 05/09/2017.</p>
+text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado <a href="edital.pdf" class="ui tiny button  teal" >VEJA AS NORMAS</a>. Submissão dos trabalhos será até o dia 01/09/2017 e o resultado do aceite será dia 05/09/2017. Não haverá tempo hábiL para a correção de trabalhos, favor enviar os trabalhos estritamente dentro das normas. Para a apresentação de trabalhos de grupos temáticos somente será disponibilizado DATASHOW com entrada VGA, computador e adaptador fica a cargo do participante.</p>
           </div>
           <div id="maincontent" class="six wide right floated column" style="margin-top:-23em;">
             <%= image_tag 'fundo.png', class: 'ui large bordered rounded image', style:'border-radius: 100px 100px 25px 25px' %>
@@ -68,7 +68,7 @@ text-justify: inter-word;">O SAPED promoverá palestras com temas atuais e de gr
                   <td>Credenciamento (Sala do núcleo de pesquisas em teorias e práticas pedagógicas - UFPI/CNPq)</td>
                  
                   <td>8h às 12h</td>
-                  <td>Exposição de pôsteres </td>
+                  <td>Oficinas e minicursos </td>
                   
                   <td>9h às 12h</td>
                   <td> Comunicações orais ( Grupos temáticos)</td>
@@ -79,7 +79,7 @@ text-justify: inter-word;">O SAPED promoverá palestras com temas atuais e de gr
                   <td>Credenciamento (Sala do núcleo de pesquisas em teorias e práticas pedagógicas - UFPI/CNPq)</td>
                   
                   <td>14h às 17h</td>
-                  <td>Oficinas e minicursos</td>
+                  <td>Exposição de pôsteres </td>
                   
                   <td>14h às 17h</td>
                   <td>Oficinas e minicursos</td>
