--- a/app/views/home/admin_dashboard.html.erb
+++ b/app/views/home/admin_dashboard.html.erb
@@ -1,19 +1,21 @@
 <div class="ui centered grid container">
     <div class="fourteen wide column">
         <div class="ui top attached tabular menu">
-          <a class="item" data-tab="one">Participantes não confirmados</a>
-          <a class="item" data-tab="third">Relátorios</a>
-          <a class="item" data-tab="four">Artigos</a>
+          <a class="item" data-tab="one">Participantes </a>
+          <a class="item" data-tab="third">Cursos</a>
+          <a class="item" data-tab="four">Download trabalhos</a>
+          <a class="item" data-tab="five">Grupos temáticos <small>relátorios</small></a>
+          <a class="item" data-tab="six">Banners <small>relátorios</small></a>
         </div>
         <div class="ui bottom attached tab segment" data-tab="one">
+          <h5>Confirmados</h5>
+          <p><%= link_to 'Usuários confirmados', users_confirmeds_path(format: :pdf), class: 'ui button positive' %></p>
+          <h5>Não Confirmados</h5>
           <%= render :partial => 'home/user_table', :locals => { users: @users_unconfirmed,  show_links: true } %>
         </div>
         <div class="ui bottom attached tab segment" data-tab="third">
             
-        <div>
-            <p><%= link_to 'Trabalhos', user_poster_path(format: :pdf), class: 'ui button positive' %>
-            <%= link_to 'Usuários confirmados', users_confirmeds_path(format: :pdf), class: 'ui button positive' %></p>
-        </div>
+        
             <table class="ui fixed single line celled table">
                 <thead>
                     <tr>
@@ -39,24 +41,7 @@
                     <% end %>
                 </tbody>
             </table>
-            <table class="ui fixed single line celled table">
-                <thead>
-                    <tr>
-                        <th colspan='2'>Grupos tematicos</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% Theme.available.each do |theme| %>
-                        <tr>
-                            <td><%= theme.name %></td>
-                            <td>
-                                <%= link_to 'Download', theme_list_path(theme, format: :pdf),  class: 'ui large button teal'  %>
-                            </td>
-                        </tr>
-                    <% end %>
-                </tbody>
-            </table>
-            <p></p>
+            
             
         </div>
         
@@ -87,6 +72,34 @@
                 </tbody>
             </table>
             
+        </div>
+        
+        <div class="ui bottom attached tab segment" data-tab="five">
+            <table class="ui fixed single line celled table">
+                <thead>
+                    <tr>
+                        <th colspan='2'>Grupos tematicos</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% Theme.available.each do |theme| %>
+                        <tr>
+                            <td><%= theme.name %></td>
+                            <td>
+                                <%= link_to 'Download', theme_list_path(theme, format: :pdf),  class: 'ui large button teal'  %>
+                            </td>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
+            <p></p>
+        </div>
+        
+        <div class="ui bottom attached tab segment" data-tab="six">
+            <div>
+                <p><%= link_to 'Trabalhos', user_poster_path(format: :pdf), class: 'ui button positive' %></p>
+            
+            </div>
         </div>
     </div>
 </div>
